--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
  language: node_js
+
+ script: ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+
  node_js:
    - "0.11"
    - "0.10"
