--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Analysis tool for London Oyster card statements",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -R spec",
+    "lint": "./node_modules/.bin/jshint ./lib/*",
+    "cr": "./node_modules/.bin/cr ./lib"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,8 @@
     "should": "~2.1.0",
     "mocha": "~1.15.1",
     "istanbul": "~0.1.46",
-    "coveralls": "~2.6.0"
+    "coveralls": "~2.6.0",
+    "jshint": "~2.3.0",
+    "complexity-report": "~1.0.1"
   }
 }
