--- a/.jshintrc
+++ b/.jshintrc
@@ -9,7 +9,7 @@
     "noarg": true,
     "node": true,
     "nonew": true,
-    "quotmark": "double",
+    "quotmark": true,
     "trailing": true,
     "undef": true,
     "unused": true
