--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec",
     "lint": "./node_modules/.bin/jshint ./lib/*",
-    "cr": "./node_modules/.bin/cr ./lib"
+    "complexity": "./node_modules/.bin/cr ./lib"
   },
   "repository": {
     "type": "git",
